# jsonhound

./: .gitignore  README.md  jsonhound.py  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_cli.py  test_helpers.py
